[LF-67/views] 조회수 업데이트 배치 테스트

--- a/.github/workflows/views-batch-actions.yml
+++ b/.github/workflows/views-batch-actions.yml
@@ -10,8 +10,8 @@ name: LiveFeedViewsBatch Module CI/CD
 on:
   pull_request:
     types: [opened, reopened, closed]
-    branches:
-      - 'main'
+#    branches:
+#      - 'main'
     paths:
       - 'LiveFeedViewsBatch/**'
 
