--- a/.github/workflows/views-batch-actions.yml
+++ b/.github/workflows/views-batch-actions.yml
@@ -8,31 +8,32 @@
 name: LiveFeedViewsBatch Module CI/CD
 
 on:
-  pull_request:
-    types: [opened, reopened, closed]
+#  pull_request:
+#    types: [opened, reopened, closed]
 #    branches:
 #      - 'main'
+  push:
     paths:
       - 'LiveFeedViewsBatch/**'
 
 jobs:
-  test:
-    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-    runs-on: ubuntu-latest
-    environment: batch
-
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3.5.2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.11.0
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Gradle Test
-        run: ./gradlew :LiveFeedBatch:test
+#  test:
+#    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+#    runs-on: ubuntu-latest
+#    environment: batch
+#
+#    steps:
+#      - name: Checkout branch
+#        uses: actions/checkout@v3.5.2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3.11.0
+#        with:
+#          distribution: 'zulu'
+#          java-version: '17'
+#
+#      - name: Gradle Test
+#        run: ./gradlew :LiveFeedBatch:test
 
   build:
     if: github.event.pull_request.merged == true
