--- a/.github/workflows/views-batch-actions.yml
+++ b/.github/workflows/views-batch-actions.yml
@@ -36,7 +36,7 @@ jobs:
 #        run: ./gradlew :LiveFeedBatch:test
 
   build:
-    if: github.event.pull_request.merged == true
+#    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: batch
 
