[LF-67/views] 조회수 업데이트 배치 테스트

--- a/LiveFeedViewsBatch/DockerFile
+++ b/LiveFeedViewsBatch/DockerFile
@@ -3,6 +3,12 @@ FROM openjdk:17-jdk
 WORKDIR /app
 
 ENV active_profile=prod
+ENV TZ=Asia/Seoul
+
+RUN apt-get update && \
+    apt-get install -y tzdata && \
+    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
+    echo $TZ > /etc/timezone
 
 RUN chmod a+x /app
 
