--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'live_feed'
 
-include('LiveFeedCrawler', 'LiveFeedParser', 'LiveFeedCommon', 'LiveFeedSaver', 'LiveFeedService', 'LiveFeedBatch')
+include('LiveFeedCrawler', 'LiveFeedParser', 'LiveFeedCommon', 'LiveFeedSaver', 'LiveFeedService', 'LiveFeedBatch', 'LiveFeedViewsBatch')
