--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,20 @@ replay_pid*
 # 프로젝트 제외 경로
 /.gradle/
 /.idea/
+
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
 application-local.yaml
