[LF-73/sse-connect] Emitters 코드 수정
- redis 유저 키워드 데이터 ttl 1일 적용
- SseEmitter 객체 onCompletion 메서드 실행 시 해당 sseKey 를 갖는 redis 데이터도 삭제하도록 추가

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -52,6 +52,10 @@ server:
 application:
   allow-origins: ${ALLOW_ORIGINS}
 
+cookie:
+  secure: true
+  domain: ${COOKIE_DOMAIN}
+
 decorator:
   datasource:
     p6spy:
