[LF-67/views] 조회수 업데이트 배치 테스트

--- a/LiveFeedViewsBatch/Dockerfile
+++ b/LiveFeedViewsBatch/Dockerfile
@@ -6,7 +6,7 @@ ENV active_profile=prod
 ENV TZ=Asia/Seoul
 
 # 시간대 설정
-RUN dnf install -y tzdata && \
+RUN microdnf install -y tzdata && \
     ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
     echo $TZ > /etc/timezone \
 
