[LF-76/redis] eventListener 관련 부분 redis pub/sub 으로 변경
- 기존 repository 패키지에서 infra 패키지 분리
- repository 패키지는 domain 패키지 하위로 이동

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -29,7 +29,8 @@ spring:
         enabled: false
 
   redis-pub-sub:
-    channel: ${REDIS_PUB_SUB_CHANNEL}
+    new-article-ids-channel: ${REDIS_ARTICLE_CHANNEL}
+    keyword-channel: ${REDIS_KEYWORD_CHANNEL}
 
 management:
   server:
